--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,16 +7,18 @@
     tools:context=".ui.picture.PictureOfTheDayFragment">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.motion.widget.MotionLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/main_layout_margin_bottom"
             android:paddingStart="@dimen/main_layout_padding_start"
-            android:paddingEnd="@dimen/main_layout_padding_end">
+            android:paddingEnd="@dimen/main_layout_padding_end"
+            app:layoutDescription="@xml/motion_scene">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout"
@@ -46,16 +48,33 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/greeting_message"
+                style="@style/equilateral_image_view_style"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/image_view_layout_height"
+                android:background="?attr/colorSecondary"
+                android:contentDescription="@string/greeting_message"
+                android:paddingTop="@dimen/greeting_message_padding_top"
+                android:text="@string/greeting_message"
+                android:textAlignment="center"
+                android:textColor="?attr/colorOnSecondary"
+                android:textSize="@dimen/greeting_message_text_size"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/main"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/input_layout" />
+
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/view_pager"
                 style="@style/equilateral_image_view_style"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/image_view_layout_height"
                 android:contentDescription="@string/photo_of_the_day_stub"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/main"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/input_layout"
+                app:layout_constraintTop_toBottomOf="@id/main"
+                app:layout_constraintEnd_toStartOf="@id/main"
                 app:srcCompat="@drawable/ic_no_photo_vector">
 
                 <com.google.android.material.tabs.TabLayout
@@ -82,7 +101,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center" />
             </FrameLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.motion.widget.MotionLayout>
     </androidx.core.widget.NestedScrollView>
 
     <include layout="@layout/bottom_sheet_layout" />
