--- a/app/src/main/res/layout/before_yesterday_fragment_end.xml
+++ b/app/src/main/res/layout/before_yesterday_fragment_end.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,8 +11,27 @@
         android:layout_height="@dimen/image_view_layout_height"
         android:contentDescription="@string/photo_of_the_day_stub"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/main"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_no_photo_vector" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/before_yesterday_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/before_yesterday_title_margin_start"
+        android:background="?attr/colorPrimaryVariant"
+        android:paddingStart="@dimen/before_yesterday_title_padding_start"
+        android:paddingTop="@dimen/before_yesterday_title_padding_top"
+        android:paddingEnd="@dimen/before_yesterday_title_padding_end"
+        android:paddingBottom="@dimen/before_yesterday_title_padding_bottom"
+        android:text="@string/before_yesterday_fragment_title"
+        android:textAlignment="center"
+        android:textColor="?attr/colorOnPrimary"
+        android:textSize="@dimen/before_yesterday_fragment_title_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
