--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -47,4 +47,15 @@
     <dimen name="before_yesterday_title_padding_end">24dp</dimen>
     <dimen name="before_yesterday_title_padding_bottom">8dp</dimen>
     <dimen name="before_yesterday_title_margin_start">48dp</dimen>
+    <dimen name="recycler_item_line_height">1dp</dimen>
+    <dimen name="recycler_item_line_margin_top">5dp</dimen>
+    <dimen name="recycler_view_item_textsize">20sp</dimen>
+    <dimen name="recycler_view_item_margin_start">5dp</dimen>
+    <dimen name="recycler_view_item_margin_top">5dp</dimen>
+    <dimen name="recycler_view_item_date_textsize">10sp</dimen>
+    <dimen name="recycler_header_text_size">35sp</dimen>
+    <dimen name="recycler_header_padding">10dp</dimen>
+    <dimen name="recycler_header_line_height">3dp</dimen>
+    <dimen name="recycler_view_item_edit_text_padding">10dp</dimen>
+    <dimen name="recycler_view_item_edit_text_size">15sp</dimen>
 </resources>
