--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,5 +9,9 @@
             android:id="@+id/navigation_two"
             android:icon="@drawable/ic_send"
             android:title="@string/screen_2" />
+        <item
+            android:id="@+id/navigation_three"
+            android:icon="@drawable/ic_home_work"
+            android:title="@string/hw6_recycler_view" />
     </group>
 </menu>
