--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="fontFamily">@font/atomic_age</item>
     </style>
 
     <style name="MyCustomThemeBlue" parent="DefaultTheme">
@@ -59,11 +60,13 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="fontFamily">@font/atomic_age</item>
     </style>
 
     <style name="Theme.COLLAPSING_TOOLBAR_LAYOUT.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="fontFamily">@font/atomic_age</item>
     </style>
 
     <style name="Theme.COLLAPSING_TOOLBAR_LAYOUT.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
